# komposter

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.darwin  Makefile.in  README  README.md  about.c  about.h  acinclude.m4  aclocal.m4  arch.h  audio.c  audio.h  autogen.sh  bezier.c  bezier.h  buffermm.c  buffermm.h  configure  configure.ac  console.c  console.h  constants.h  dialog.c  dialog.h  dotfile.c  dotfile.h  filedialog.c  filedialog.h  fileops.c  fileops.h  font.c  font.h  main.c  modules.c  modules.h  patch.c  patch.h  (+11 more)
converter/: Makefile  constants.h  converter.c  fileops.c  fileops.h  moduleinfo.c  modules.h
doc/: about.txt  komposter.txt  komposter_sketch_v1.psd  releasenotes.txt
examples/: fm_synth_2op.ksyn  juno_bass.ksyn  supersaw.ksyn  sweep_pads.ksyn  trance_supersaw.ksyn
examples/songs/: 2015_intro.ksong  acidtest.ksong  delaytest.ksong  drumtest.ksong  intro2011.ksong  introtune.ksong  juno60.ksong  modulator_test.ksong  sawtest.ksong
examples/synths/: analog_brass.ksyn  drum_machine.ksyn  juno-like.ksyn  phase_mod_2op.ksyn  schroeder.ksyn  trance_supersaw.ksyn  transistor_bass.ksyn
player/: Makefile  main.asm  modules.asm  player.asm  song.inc
resources/: komposter.AppSettings  komposter.PkgInfo  komposter.desktop  komposter.plist  komposter_icon.psd
resources/shaders/: palette.frag
trunk/: INSTALL  Komposter-2.0b1.dmg  Makefile.darwin  Makefile.in  about.h  acinclude.m4  arch.h  audio.c  audio.h  bezier.h  buffermm.c  buffermm.h  configure  console.h  dialog.c  dialog.h  dotfile.c  filedialog.c  fileops.c  font.h  install.sh.darwin  komposter  main.c  modules.c  modules.h  patch.h  pattern.h  sequencer.c  sequencer.h  synthesizer.c  widgets.c  widgets.h
trunk/converter/: Makefile  constants.h  converter  fileops.h  modules.h
trunk/doc/: changelog.txt  fileformat.txt  info.txt  (+2 more)
(+12 files in other folders)
